--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "iview": "^3.2.2",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "quagga": "^0.12.1",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
